--- a/things-global-behavior.html
+++ b/things-global-behavior.html
@@ -18,9 +18,9 @@ Things.GlobalBehavior = {
   properties: {
     /**
      * GlobalBehavior를 import한 This에 적용되는 동시에 Window 변수인 dataGlobal를 Reference한다.
-     * 모든 GlobalBehavior를 사용한 Elements를 변수 instances에 저장한다. 필요할 경우에 Global변수 instances를 통하여 GlobalBehavior를 사용한 전체 Elements에 대한 변경을 할 수 있다.
      * 
-     * @type {Object}
+     * 모든 GlobalBehavior를 사용한 Elements를 변수 instances에 저장한다. 
+     * 필요할 경우에 Window변수 instances를 통하여 GlobalBehavior를 사용한 전체 Elements에 대한 변경을 할 수 있다.
      */
     globals: {
       type: Object,
