--- a/things-global-behavior.html
+++ b/things-global-behavior.html
@@ -1,8 +1,8 @@
 <script>
 
 window.Things = window.Things || {};
-var instances = [];
-var dataGlobal = {};
+var _thingsGlobalBehaviorInstances = [];
+var _thingsDataGlobal = {};
 
 /**
  * Global변수의 Set/Get을 Elements를 통하여 접속이 가능하게하는 Behavior이다.
@@ -19,13 +19,13 @@ Things.GlobalBehavior = {
     /**
      * GlobalBehavior를 import한 This에 적용되는 동시에 Window 변수인 dataGlobal를 Reference한다.
      * 
-     * 모든 GlobalBehavior를 사용한 Elements를 변수 instances에 저장한다. 
-     * 필요할 경우에 Window변수 instances를 통하여 GlobalBehavior를 사용한 전체 Elements에 대한 변경을 할 수 있다.
+     * 모든 GlobalBehavior를 사용한 Elements를 변수 _thingsGlobalBehaviorInstances에 저장한다. 
+     * 필요할 경우에 Window변수 _thingsGlobalBehaviorInstances를 통하여 GlobalBehavior를 사용한 전체 Elements에 대한 변경을 할 수 있다.
      */
     globals: {
       type: Object,
-      notify: true,
-      value: dataGlobal
+      notify: true
+      value: _thingsDataGlobal
     }
   },
   
@@ -43,17 +43,17 @@ Things.GlobalBehavior = {
     
     this.notifyPath = function(path, value) {
       _notifyPathOrig.apply(this, arguments);
-
+      
       if (arguments[0].split(".")[0] === "globals") {
-        this.invokeInstances(_notifyPathOrig, arguments);
+        this._invokeInstances(_notifyPathOrig, arguments);
       }
     };
   },
   
   _invokeInstances: function(fn, args) {
     var i;
-    for (i = 0; i < instances.length; i++) {
-      instance = instances[i];
+    for (i = 0; i < _thingsGlobalBehaviorInstances.length; i++) {
+      instance = _thingsGlobalBehaviorInstances[i];
       if (instance !== this) {
         fn.apply(instance, args);
       }
@@ -61,13 +61,13 @@ Things.GlobalBehavior = {
   },
   
   attached: function() {
-    instances.push(this);
+    _thingsGlobalBehaviorInstances.push(this);
   },
   
   detached: function() {
-    var i = instances.indexOf(this);
+    var i = _thingsGlobalBehaviorInstances.indexOf(this);
     if (i >= 0) {
-      instances.splice(i, 1);
+      _thingsGlobalBehaviorInstances.splice(i, 1);
     }
   },
 
