--- a/things-global-behavior.html
+++ b/things-global-behavior.html
@@ -24,7 +24,7 @@ Things.GlobalBehavior = {
      */
     globals: {
       type: Object,
-      notify: true
+      notify: true,
       value: _thingsDataGlobal
     }
   },
