--- a/things-global-behavior.html
+++ b/things-global-behavior.html
@@ -29,6 +29,9 @@ Things.GlobalBehavior = {
     }
   },
   
+  /**
+   * Life cycle - ready 
+   */
   ready: function() {
     var _setOrig = this.set;
     var _notifyPathOrig = this.notifyPath;
@@ -51,7 +54,7 @@ Things.GlobalBehavior = {
   },
   
   _invokeInstances: function(fn, args) {
-    var i;
+    var i = 0;
     for (i = 0; i < _thingsGlobalBehaviorInstances.length; i++) {
       instance = _thingsGlobalBehaviorInstances[i];
       if (instance !== this) {
@@ -60,10 +63,16 @@ Things.GlobalBehavior = {
     }
   },
   
+  /**
+   * Life cycle - attached 
+   */  
   attached: function() {
     _thingsGlobalBehaviorInstances.push(this);
   },
   
+  /**
+   * Life cycle - detached 
+   */
   detached: function() {
     var i = _thingsGlobalBehaviorInstances.indexOf(this);
     if (i >= 0) {
@@ -72,8 +81,8 @@ Things.GlobalBehavior = {
   },
 
   /**
-  * ajax 호출 후 에러 발생시 unauthorized 에러이면 로그인 페이지로 이동 
-  */
+   * ajax 호출 후 에러 발생시 unauthorized 에러이면 로그인 페이지로 이동 
+   */
   handleUnauthorized: function(response) {
     this.set('globals.user', null);
     
@@ -87,18 +96,20 @@ Things.GlobalBehavior = {
 
     page('/login');
   },
+
   /**
    * 로그인 여부를 확인하는 기능
    */
   isSignedIn:function () {
     return this.get('globals.user') ? true : false; 
   },
+  
   /**
    * Show toast message
    * @param msg information
    */
   showToastMsg: function(msg) {
-    document.dispatchEvent(new CustomEvent('things-show-tost', { 'detail': { 'msg': msg } }));
+    document.dispatchEvent(new CustomEvent('things-show-toast', { 'detail': { 'msg': msg } }));
   }
   
 };
