--- a/things-global-behavior.html
+++ b/things-global-behavior.html
@@ -3,132 +3,138 @@
 Copyright © HatioLab Inc. All rights reserved.
 -->
 <script>
+  window.Things = window.Things || {}
+  window.Things.DataGlobal = window.Things.DataGlobal || {}
+  var _thingsGlobalBehaviorInstances = []
 
-window.Things = window.Things || {};
-window.Things.DataGlobal = window.Things.DataGlobal || {};
-var _thingsGlobalBehaviorInstances = [];
+  /**
+   * Global변수의 Set/Get을 Elements를 통하여 접속이 가능하게하는 Behavior이다.
+   * 일부 공통으로 사용되는 Event와 Message처리도 수행한다.
+   *
+   * @polymerBehavior Things.GlobalBehavior
+   *
+   * @demo demo/index.html
+   */
 
-/**
- * Global변수의 Set/Get을 Elements를 통하여 접속이 가능하게하는 Behavior이다.
- * 일부 공통으로 사용되는 Event와 Message처리도 수행한다.
- *
- * @polymerBehavior Things.GlobalBehavior
- *
- * @demo demo/index.html
- */
+  Things.GlobalBehavior = {
+    properties: {
+      /**
+       * GlobalBehavior를 import한 This에 적용되는 동시에 Window 변수인 dataGlobal를 Reference한다.
+       *
+       * 모든 GlobalBehavior를 사용한 Elements를 변수 _thingsGlobalBehaviorInstances에 저장한다.
+       * 필요할 경우에 Window변수 _thingsGlobalBehaviorInstances를 통하여 GlobalBehavior를 사용한 전체 Elements에 대한 변경을 할 수 있다.
+       */
+      globals: {
+        type: Object,
+        value: Things.DataGlobal
+      }
+    },
 
-Things.GlobalBehavior = {
-
-  properties: {
     /**
-     * GlobalBehavior를 import한 This에 적용되는 동시에 Window 변수인 dataGlobal를 Reference한다.
-     *
-     * 모든 GlobalBehavior를 사용한 Elements를 변수 _thingsGlobalBehaviorInstances에 저장한다.
-     * 필요할 경우에 Window변수 _thingsGlobalBehaviorInstances를 통하여 GlobalBehavior를 사용한 전체 Elements에 대한 변경을 할 수 있다.
+     * Life cycle - ready
+     * *******
      */
-    globals: {
-      type: Object,
-      value: Things.DataGlobal
-    }
-  },
+    ready: function() {
+      var _setOrig = this.set
+      var _notifyPathOrig = this.notifyPath
+      this._notifyPathOrig = this.notifyPath
 
-  /**
-   * Life cycle - ready
-   * *******
-   */
-  ready: function() {
-    var _setOrig = this.set;
-    var _notifyPathOrig = this.notifyPath;
-    this._notifyPathOrig = this.notifyPath;
+      this.set = function() {
+        _setOrig.apply(this, arguments)
 
-    this.set = function() {
-      _setOrig.apply(this, arguments);
-
-      if (arguments[0].substring(0, 8) === "globals.") {
-        this._invokeInstances(_notifyPathOrig, arguments);
+        if (arguments[0].substring(0, 8) === 'globals.') {
+          this._invokeInstances(_notifyPathOrig, arguments)
+        }
       }
-    };
 
-    this.notifyPath = function(path, value) {
-      _notifyPathOrig.apply(this, arguments);
+      this.notifyPath = function(path, value) {
+        _notifyPathOrig.apply(this, arguments)
 
-      if (arguments[0].substring(0, 8) === "globals.") {
-        this._invokeInstances(_notifyPathOrig, arguments);
+        if (arguments[0].substring(0, 8) === 'globals.') {
+          this._invokeInstances(_notifyPathOrig, arguments)
+        }
       }
-    };
-  },
+    },
 
-  _invokeInstances: function(fn, args) {
-    var i = 0;
-    for (i = 0; i < _thingsGlobalBehaviorInstances.length; i++) {
-      instance = _thingsGlobalBehaviorInstances[i];
-      if (instance !== this) {
-        fn.apply(instance, args);
+    _invokeInstances: function(fn, args) {
+      var i = 0
+      for (i = 0; i < _thingsGlobalBehaviorInstances.length; i++) {
+        instance = _thingsGlobalBehaviorInstances[i]
+        if (instance !== this) {
+          fn.apply(instance, args)
+        }
       }
+    },
+
+    /**
+     * Life cycle - attached
+     * ******
+     */
+    attached: function() {
+      _thingsGlobalBehaviorInstances.push(this)
+
+      /* 새로 조인한 멤버에게는 기존에 설정된 글로벌 설정을 강제로 notify 해주어야 한다. */
+      var globals = Things.DataGlobal
+      Object.keys(globals).forEach(
+        function(key) {
+          if (typeof globals[key] == 'function') return
+          this._notifyPathOrig('globals.' + key, globals[key])
+        }.bind(this)
+      )
+    },
+
+    /**
+     * Life cycle - detached
+     * ********
+     */
+    detached: function() {
+      var i = _thingsGlobalBehaviorInstances.indexOf(this)
+      if (i >= 0) {
+        _thingsGlobalBehaviorInstances.splice(i, 1)
+      }
+    },
+
+    /**
+     * ajax 호출 후 에러 발생시 unauthorized 에러이면 로그인 페이지로 이동
+     * *******
+     */
+    handleUnauthorized: function(response) {
+      this.notifyPath('globals.user', null)
+
+      var eventDetail = { response: response }
+
+      var event = new CustomEvent(
+        'things-unauthorized-session',
+        { detail: eventDetail },
+        { cancelable: true }
+      )
+      document.dispatchEvent(event)
+      var defaultPrevented = document.dispatchEvent(event)
+
+      if (!defaultPrevented) return
+
+      page('/login')
+    },
+
+    /**
+     * 로그인 여부를 확인하는 기능
+     * *******
+     */
+    isSignedIn: function() {
+      return this.get('globals.user') ? true : false
+    },
+
+    /**
+     * Show toast message
+     * *****
+     * @param msg information
+     */
+    showToastMsg: function(msg) {
+      document.dispatchEvent(
+        new CustomEvent('things-show-toast', { detail: { msg: msg } })
+      )
     }
-  },
-
-  /**
-   * Life cycle - attached
-   * ******
-   */
-  attached: function() {
-    _thingsGlobalBehaviorInstances.push(this);
-
-    /* 새로 조인한 멤버에게는 기존에 설정된 글로벌 설정을 강제로 notify 해주어야 한다. */
-    var globals = Things.DataGlobal;
-    Object.keys(globals).forEach(function(key) {
-      if(typeof(globals[key]) == 'function')
-        return;
-      this._notifyPathOrig('globals.' + key, globals[key])
-    }.bind(this));
-  },
-
-  /**
-   * Life cycle - detached
-   * ********
-   */
-  detached: function() {
-    var i = _thingsGlobalBehaviorInstances.indexOf(this);
-    if (i >= 0) {
-      _thingsGlobalBehaviorInstances.splice(i, 1);
-    }
-  },
-
-  /**
-   * ajax 호출 후 에러 발생시 unauthorized 에러이면 로그인 페이지로 이동
-   * *******
-   */
-  handleUnauthorized: function(response) {
-    this.notifyPath('globals.user', null);
-
-    var eventDetail = {'response':response};
-
-    var event = new CustomEvent('things-unauthorized-session', { 'detail': eventDetail },{cancelable:true});
-    document.dispatchEvent(event);
-    var defaultPrevented = document.dispatchEvent(event);
-
-    if(!defaultPrevented) return;
-
-    page('/login');
-  },
-
-  /**
-   * 로그인 여부를 확인하는 기능
-   * *******
-   */
-  isSignedIn:function () {
-    return this.get('globals.user') ? true : false;
-  },
-
-  /**
-   * Show toast message
-   * *****
-   * @param msg information
-   */
-  showToastMsg: function(msg) {
-    document.dispatchEvent(new CustomEvent('things-show-toast', { 'detail': { 'msg': msg } }));
   }
-
-};
+  window._thingsGlobalBehaviorInstances = _thingsGlobalBehaviorInstances
+  exports['_thingsGlobalBehaviorInstances'] = _thingsGlobalBehaviorInstances
 </script>
