--- a/demo/index.html
+++ b/demo/index.html
@@ -1,77 +1,65 @@
 <!--
 @license
-Copyright © HatioLab Inc. All rights reserved.
+Copyright © 2015-2021 Shenzhen Weixun All rights reserved.
 -->
-<!doctype html>
+<!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes" />
     <title>things-import-excel Demo</title>
     <script src="../../webcomponentsjs/webcomponents-lite.min.js"></script>
-    <link rel="import" href="../things-global-behavior.html">
-</head>
+    <link rel="import" href="../things-global-behavior.html" />
+  </head>
 
-<body unresolved>
+  <body unresolved>
     <demo-snippet class="centered-demo">
-        <template>
-          <test-1></test-1>
-          <test-2></test-2>
-          <dom-module id="test-1">
-            <template>
-              <style>
-                :host {
-                  display: block;
-                }
-              </style>
+      <template>
+        <test-1></test-1>
+        <test-2></test-2>
+        <dom-module id="test-1">
+          <template>
+            <style>
+              :host {
+                display: block;
+              }
+            </style>
+          </template>
+          <script>
+            Polymer({
+              is: 'test-1',
+              behavior: [Things.GlobalBehavior],
+              observers: ['onGlobalsChange(globals.*)'],
+              onGlobalsChange: function (a, b, c) {
+                console.log(a, b, c);
+              },
+            });
+          </script>
+        </dom-module>
 
-            </template>
-            <script>
-              Polymer({
-                is: 'test-1',
-                behavior:[
-                  Things.GlobalBehavior
-                ],
-                observers:[
-                  'onGlobalsChange(globals.*)'
-                ],
-                onGlobalsChange: function(a,b,c){
-                  console.log(a,b,c)
-                }
-              });
-            </script>
-          </dom-module>
-
-          <dom-module id="test-2">
-            <template>
-              <style>
-                :host {
-                  display: block;
-                }
-              </style>
-
-            </template>
-            <script>
-              Polymer({
-                is: 'test-2',
-                behavior:[
-                  Things.GlobalBehavior
-                ],
-                observers:[
-                  'onGlobalsChange(globals.*)'
-                ],
-                onGlobalsChange: function(a,b,c){
-                  console.log(a,b,c)
-                },
-                attached: function(){
-                  this.set('globals.a','ABC')
-                }
-              });
-            </script>
-          </dom-module>
-        </template>
+        <dom-module id="test-2">
+          <template>
+            <style>
+              :host {
+                display: block;
+              }
+            </style>
+          </template>
+          <script>
+            Polymer({
+              is: 'test-2',
+              behavior: [Things.GlobalBehavior],
+              observers: ['onGlobalsChange(globals.*)'],
+              onGlobalsChange: function (a, b, c) {
+                console.log(a, b, c);
+              },
+              attached: function () {
+                this.set('globals.a', 'ABC');
+              },
+            });
+          </script>
+        </dom-module>
+      </template>
     </demo-snippet>
-</body>
-
+  </body>
 </html>
