--- a/things-global-behavior.html
+++ b/things-global-behavior.html
@@ -1,11 +1,11 @@
 <!--
 @license
-Copyright © HatioLab Inc. All rights reserved.
+Copyright © 2015-2021 Shenzhen Weixun All rights reserved.
 -->
 <script>
-  window.Things = window.Things || {}
-  window.Things.DataGlobal = window.Things.DataGlobal || {}
-  var _thingsGlobalBehaviorInstances = []
+  window.Things = window.Things || {};
+  window.Things.DataGlobal = window.Things.DataGlobal || {};
+  var _thingsGlobalBehaviorInstances = [];
 
   /**
    * Global변수의 Set/Get을 Elements를 통하여 접속이 가능하게하는 Behavior이다.
@@ -26,42 +26,42 @@ Copyright © HatioLab Inc. All rights reserved.
        */
       globals: {
         type: Object,
-        value: Things.DataGlobal
-      }
+        value: Things.DataGlobal,
+      },
     },
 
     /**
      * Life cycle - ready
      * *******
      */
-    ready: function() {
-      var _setOrig = this.set
-      var _notifyPathOrig = this.notifyPath
-      this._notifyPathOrig = this.notifyPath
+    ready: function () {
+      var _setOrig = this.set;
+      var _notifyPathOrig = this.notifyPath;
+      this._notifyPathOrig = this.notifyPath;
 
-      this.set = function() {
-        _setOrig.apply(this, arguments)
-
-        if (arguments[0].substring(0, 8) === 'globals.') {
-          this._invokeInstances(_notifyPathOrig, arguments)
-        }
-      }
-
-      this.notifyPath = function(path, value) {
-        _notifyPathOrig.apply(this, arguments)
+      this.set = function () {
+        _setOrig.apply(this, arguments);
 
         if (arguments[0].substring(0, 8) === 'globals.') {
-          this._invokeInstances(_notifyPathOrig, arguments)
+          this._invokeInstances(_notifyPathOrig, arguments);
         }
-      }
+      };
+
+      this.notifyPath = function (path, value) {
+        _notifyPathOrig.apply(this, arguments);
+
+        if (arguments[0].substring(0, 8) === 'globals.') {
+          this._invokeInstances(_notifyPathOrig, arguments);
+        }
+      };
     },
 
-    _invokeInstances: function(fn, args) {
-      var i = 0
+    _invokeInstances: function (fn, args) {
+      var i = 0;
       for (i = 0; i < _thingsGlobalBehaviorInstances.length; i++) {
-        instance = _thingsGlobalBehaviorInstances[i]
+        instance = _thingsGlobalBehaviorInstances[i];
         if (instance !== this) {
-          fn.apply(instance, args)
+          fn.apply(instance, args);
         }
       }
     },
@@ -70,27 +70,27 @@ Copyright © HatioLab Inc. All rights reserved.
      * Life cycle - attached
      * ******
      */
-    attached: function() {
-      _thingsGlobalBehaviorInstances.push(this)
+    attached: function () {
+      _thingsGlobalBehaviorInstances.push(this);
 
       /* 새로 조인한 멤버에게는 기존에 설정된 글로벌 설정을 강제로 notify 해주어야 한다. */
-      var globals = Things.DataGlobal
+      var globals = Things.DataGlobal;
       Object.keys(globals).forEach(
-        function(key) {
-          if (typeof globals[key] == 'function') return
-          this._notifyPathOrig('globals.' + key, globals[key])
+        function (key) {
+          if (typeof globals[key] == 'function') return;
+          this._notifyPathOrig('globals.' + key, globals[key]);
         }.bind(this)
-      )
+      );
     },
 
     /**
      * Life cycle - detached
      * ********
      */
-    detached: function() {
-      var i = _thingsGlobalBehaviorInstances.indexOf(this)
+    detached: function () {
+      var i = _thingsGlobalBehaviorInstances.indexOf(this);
       if (i >= 0) {
-        _thingsGlobalBehaviorInstances.splice(i, 1)
+        _thingsGlobalBehaviorInstances.splice(i, 1);
       }
     },
 
@@ -98,30 +98,26 @@ Copyright © HatioLab Inc. All rights reserved.
      * ajax 호출 후 에러 발생시 unauthorized 에러이면 로그인 페이지로 이동
      * *******
      */
-    handleUnauthorized: function(response) {
-      this.notifyPath('globals.user', null)
+    handleUnauthorized: function (response) {
+      this.notifyPath('globals.user', null);
 
-      var eventDetail = { response: response }
+      var eventDetail = { response: response };
 
-      var event = new CustomEvent(
-        'things-unauthorized-session',
-        { detail: eventDetail },
-        { cancelable: true }
-      )
-      document.dispatchEvent(event)
-      var defaultPrevented = document.dispatchEvent(event)
+      var event = new CustomEvent('things-unauthorized-session', { detail: eventDetail }, { cancelable: true });
+      document.dispatchEvent(event);
+      var defaultPrevented = document.dispatchEvent(event);
 
-      if (!defaultPrevented) return
+      if (!defaultPrevented) return;
 
-      page('/login')
+      page('/login');
     },
 
     /**
      * 로그인 여부를 확인하는 기능
      * *******
      */
-    isSignedIn: function() {
-      return this.get('globals.user') ? true : false
+    isSignedIn: function () {
+      return this.get('globals.user') ? true : false;
     },
 
     /**
@@ -129,12 +125,10 @@ Copyright © HatioLab Inc. All rights reserved.
      * *****
      * @param msg information
      */
-    showToastMsg: function(msg) {
-      document.dispatchEvent(
-        new CustomEvent('things-show-toast', { detail: { msg: msg } })
-      )
-    }
-  }
-  window._thingsGlobalBehaviorInstances = _thingsGlobalBehaviorInstances
-  exports['_thingsGlobalBehaviorInstances'] = _thingsGlobalBehaviorInstances
+    showToastMsg: function (msg) {
+      document.dispatchEvent(new CustomEvent('things-show-toast', { detail: { msg: msg } }));
+    },
+  };
+  window._thingsGlobalBehaviorInstances = _thingsGlobalBehaviorInstances;
+  exports['_thingsGlobalBehaviorInstances'] = _thingsGlobalBehaviorInstances;
 </script>
